--- a/src/pages/BookLanding/BookLanding.module.scss
+++ b/src/pages/BookLanding/BookLanding.module.scss
@@ -1,3 +1,5 @@
+@import '../../sass/base.scss';
+
 .form {
     display: flex;
     flex-direction: column;
@@ -8,29 +10,29 @@
     font-size: 2em;
 
     & label {
-        text-align: center;
+        margin-bottom: -1rem;
     }
 
     & input  {
         font-family: inherit;
         font-size: inherit;
         color: inherit;
-        border: 1px#C5B6A5 solid;
-        padding: .7rem 2rem;
+        border: 1px $color-grey solid;
+        padding: 1rem 2rem;
         border-radius: 100px;
         width: 20%;
         transition: all .2s;
     }
+
+    & button {
+        padding: 1.2rem 1.5rem;
+        border-radius: 10px;
+        background-color: $color-grey;
+        color: $color-white;
+        font-size: 1.3rem;
+    }
 }
 
-/* .form input {
-    width: 20rem;
-    border: 1px solid black;
-    line-height: 2.5rem;
-    margin: 2rem auto;
-} */
-
-/* .form button {
-    font-size: 1.5rem;
-    padding: 0.7rem;
-} */
+h1 {
+    text-align: center;
+}
