Create Book module style sheet

--- a/src/pages/BookLanding/BookLanding.module.scss
+++ b/src/pages/BookLanding/BookLanding.module.scss
@@ -36,3 +36,10 @@
 h1 {
     text-align: center;
 }
+
+.container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10rem;
+}
