--- a/src/components/Book/Book.module.scss
+++ b/src/components/Book/Book.module.scss
@@ -37,7 +37,7 @@
         background-color: $color-silk;
         padding: 2rem;
 
-        display: none;
+        display: flex;
         flex-direction: column;
 
         & .author {
