--- a/src/components/Book/Book.module.scss
+++ b/src/components/Book/Book.module.scss
@@ -2,40 +2,47 @@
 
 
 .bookCard {
-    width: 200px;
+    width: 250px;
     height: auto;
     padding: 0.5em;
 
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
+    align-items: center;
 
     & h3 {
-        font-size: 2rem;
+        font-size: 1.3rem;
         text-align: center;
         margin-bottom: 2rem;
     }
 
     & img {
-        width: 100%;
+        width: 200px;
     }
 
     & .buttons {
-        display: flex;
+        width: 200px;
         justify-content: space-between;
+        margin-top: 1rem;
+        
         background-color: $color-grey;
+        
         
         & button {
             font-size: 1.5rem;
             font-weight: bold;
             color: $color-white;
             padding: 1rem 1.5rem;
+            align-self: flex-end;
         }
     }
 
     & .info {
         background-color: $color-silk;
         padding: 2rem;
+        height: 300px;
+        overflow: scroll;
 
         display: flex;
         flex-direction: column;
