--- a/src/components/Destination/Destination.module.scss
+++ b/src/components/Destination/Destination.module.scss
@@ -1,7 +1,10 @@
 .container {
     width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .destinationCard {
-    width: 20%;
+    width: 40%;
     border: 1px red solid;
 }
