--- a/src/components/Destination/Destination.module.scss
+++ b/src/components/Destination/Destination.module.scss
@@ -1,10 +1,8 @@
-.container {
-    width: 80%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
 .destinationCard {
-    width: 40%;
+    width: 450px;
+    height: 600px;
+    margin-bottom: 3rem;
     border: 1px red solid;
+
+    display: flex;
 }
