--- a/src/components/BookCard/BookCard.module.scss
+++ b/src/components/BookCard/BookCard.module.scss
@@ -1,5 +1,11 @@
 @import '../../sass/base.scss';
 
+.bookContainer {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
 .book {
     border: 1px black solid;
     width: 150px;
