--- a/src/components/Destination/Destination.module.scss
+++ b/src/components/Destination/Destination.module.scss
@@ -2,8 +2,18 @@
 .destinationCard {
     width: 450px;
     height: 600px;
-    margin-bottom: 3rem;
+    margin-top: 7rem;
     border: 1px red solid;
+    overflow-y: scroll;
 
     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.destination {
+    font-size: 2rem;
+    color: black;
+    margin-top: 2rem;
+    margin-bottom: 0;
 }
