--- a/src/sass/typography.scss
+++ b/src/sass/typography.scss
@@ -1,6 +1,12 @@
 body {
     font-family: "Lato", sans-serif;
-    font-weight: 400;
     /* font-size: 16px; */
     line-height: 1.7;
+}
+
+h3 {
+    line-height: 1.5rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
 }
