--- a/src/components/Destination/Destination.module.scss
+++ b/src/components/Destination/Destination.module.scss
@@ -3,17 +3,18 @@
     width: 450px;
     height: 600px;
     margin-top: 7rem;
-    border: 1px red solid;
+    border: 1rem gray solid;
     overflow-y: scroll;
 
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .destination {
-    font-size: 2rem;
-    color: black;
-    margin-top: 2rem;
-    margin-bottom: 0;
+    width: 100%;
+    margin-left: auto;
+    background-color: grey;
+    font-size: 2rem;  
+    padding: 1.3rem;
+    color: #fff;
 }
