--- a/src/pages/BookList/BookList.module.scss
+++ b/src/pages/BookList/BookList.module.scss
@@ -1,6 +1,8 @@
 .container {
     height: 100vh;
+    padding: 0 10rem;
     display: flex;
+    align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
 }
