Fix button container

--- a/src/pages/BookLanding/BookLanding.module.scss
+++ b/src/pages/BookLanding/BookLanding.module.scss
@@ -37,9 +37,10 @@ h1 {
     text-align: center;
 }
 
+
 .container {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 0 10rem;
 }
