--- a/src/components/Book/Book.module.scss
+++ b/src/components/Book/Book.module.scss
@@ -11,17 +11,19 @@
     justify-content: space-between;
     align-items: center;
 
+    //review img value
     & img {
         width: 200px;
     }
 
     & .buttons {
+        display: flex;
         width: 200px;
-        margin-top: 1rem;
-        background-color: $color-grey;
-        
+
          
         & button {
+            flex: 0 0 50%;
+            background-color: $color-grey;
             font-size: 1.5rem;
             font-weight: bold;
             color: $color-white;
@@ -36,7 +38,6 @@
     padding: 1.5rem;
     max-height: 350px;
     overflow: scroll;
-    text-align: justify;
 
     display: flex;
     flex-direction: column;
@@ -45,10 +46,12 @@
         font-size: 2rem;
         font-weight: bold;
         margin-bottom: 1rem;
+        text-align: center;
     }
 
     & .synopsis {
         margin-top: 1rem;
         font-size: 1.5rem;
+        text-align: justify;
     }
 }
