--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,3 +24,16 @@ a {
 ::-webkit-scrollbar {
     display:none;
 }
+
+button {
+    outline: none;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus {
+  border: 1px solid gray;
+  -webkit-text-fill-color: gray;
+  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
