--- a/src/pages/BookLanding/BookLanding.module.scss
+++ b/src/pages/BookLanding/BookLanding.module.scss
@@ -6,11 +6,12 @@
     justify-content: center;
     align-items: center;
 
-    margin: 6rem auto;
+    //margin: 20rem auto;
     font-size: 2em;
 
     & label {
-        margin-bottom: -1rem;
+        margin-bottom: -3rem;
+        font-size: 1.7rem;
     }
 
     & input  {
@@ -18,13 +19,14 @@
         font-size: inherit;
         color: inherit;
         border: 1px $color-grey solid;
-        padding: 1rem 2rem;
+        padding: 1rem 15rem;
         border-radius: 100px;
         width: 20%;
         transition: all .2s;
     }
 
     & button {
+        margin-top: -2rem;
         padding: 1.2rem 1.5rem;
         border-radius: 10px;
         background-color: $color-grey;
