Add breakpoint scss file

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -3,3 +3,8 @@ $color-champagne: #FFF1A1;
 $color-white: #fff;
 $color-grey: #C5B6A5;
 $color-silk: #FBF6E0;
+
+
+$bp-small: 0;
+$bp-medium: 576px;
+$bp-large: 1100px;
