--- a/src/pages/BookList/BookList.module.scss
+++ b/src/pages/BookList/BookList.module.scss
@@ -1,22 +1,34 @@
+@import '../../sass/base.scss';
+
 .container {
     display: flex;
     flex-direction: column;
 }
 
 .containerList {
-    height: 100vh;
-    padding: 0 10rem;
+    
+    padding: 2rem;
     display: flex;
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
+
+    @include large {
+        height: 100vh;
+        padding: 0 10rem;
+    }
 }
 
 .backbtn {
-    align-self: flex-end;
-    margin: 2rem 3.5rem 0 0;
+    align-self: center;
+    margin-top: -2rem;
     font-size: 1.5rem;
     font-weight: 700;
     border-bottom: 1px solid currentColor;
     padding-bottom: inline-block;
+
+    @include large {
+        align-self: flex-end;
+        margin: 2rem 3.5rem 0 0;
+    }
 }
