Add styles for medium size breakpoint

--- a/src/components/Destination/Destination.module.scss
+++ b/src/components/Destination/Destination.module.scss
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
 
+
     @include large {
          width: 450px;
          margin-top: 7rem;
@@ -25,6 +26,7 @@
     text-align: center;
 
     @include large {
+        text-align: left;
         margin-left: auto;
         font-size: 2rem; 
         padding: 1.3rem;
