--- a/src/pages/BookList/BookList.module.scss
+++ b/src/pages/BookList/BookList.module.scss
@@ -2,20 +2,26 @@
 
 .container {
     display: flex;
+    width: 100%;
     flex-direction: column;
 }
 
 .containerList {
-    
     padding: 2rem;
     display: flex;
     align-items: center;
-    justify-content: space-around;
     flex-wrap: wrap;
+
+    @include medium {
+        flex-direction: column;
+        justify-content: center;
+        padding: 0 4rem;
+    }
 
     @include large {
         height: 100vh;
         padding: 0 10rem;
+        justify-content: space-around;
     }
 }
 
